# zit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  design.md  package-lock.json  package.json  requirements.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: audit.yml  ci.yml  deploy.yml  release.yml
Formula/: zit.rb
aws/: README.md  deploy.sh
aws/infrastructure/: template.yaml
aws/infrastructure/.aws-sam/: build.toml
aws/lambda/: handler.py  prompts.py
aws/tests/: test_handler.py
docs/: PRD.md  agent_mode_plan.md
scripts/: setup-hooks.sh
src/: app.rs  config.rs  event.rs  keychain.rs  main.rs
src/ai/: client.rs  mod.rs  prompts.rs  provider.rs
src/git/: branch.rs  diff.rs  github_auth.rs  log.rs  merge.rs  mod.rs  reflog.rs  remote.rs  runner.rs  stash.rs  status.rs
src/ui/: agent.rs  ai_mentor.rs  bisect.rs  branches.rs  cherry_pick.rs  commit.rs  dashboard.rs  github.rs  help.rs  merge_resolve.rs  mod.rs  reflog.rs  staging.rs  stash.rs  time_travel.rs  timeline.rs  utils.rs  workflow_builder.rs
tests/: integration.rs
website/zit/: package.json
website/zit/app/: globals.css  layout.tsx  page.tsx
website/zit/app/compare/: page.tsx
website/zit/app/docs/: DocsLayout.tsx  page.tsx
website/zit/components/: AiFeatures.tsx  Architecture.tsx  BentoGrid.tsx  CompareHero.tsx  Configuration.tsx  Cta.tsx  Development.tsx  Features.tsx  Footer.tsx  Hero.tsx  Installation.tsx  Keybindings.tsx  Navbar.tsx  PageTeaser.tsx  Pricing.tsx  PricingHero.tsx  Troubleshooting.tsx  WhyZitWins.tsx
(+1 files in other folders)
