[package]
name = "zit"
version = "0.1.1"
edition = "2021"
description = "An AI-powered, terminal-based Git and GitHub CLI tool"
license = "MIT"
authors = ["Meet Patel"]
repository = "https://github.com/JUSTMEETPATEL/zit"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
dirs = "6"
anyhow = "1"
unicode-width = "0.2"
regex = "1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
