[package]
name = "zit"
version = "0.2.0"
edition = "2024"
description = "An AI-powered, terminal-based Git and GitHub CLI tool"
license-file = "LICENSE"
authors = ["Meet Patel"]
repository = "https://github.com/JUSTMEETPATEL/zit"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Utilities
dirs = "6"
anyhow = "1"
unicode-width = "0.2"
regex = "1"
log = "0.4"
env_logger = "0.11"
cli-clipboard = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
libc = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
